fixed collapse & chat input align & saving state

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,3 +8,6 @@
 .mantine-1q36a81 {
     padding: 0px;
 }
+.mantine-1avyp1d {
+    transition: none !important;
+}
